build: Improve stability.